// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls component game on renders 1`] = `
<div class="controls">
  <div><button class="button__red">
      New deck
    </button> <span test-id="remaining" class="small"> Remaining cards in deck: 100 </span></div>
  <div><button class="button__red">
      New hand
    </button> <button>
      Hit me
    </button> <button>
      Stay
    </button></div>
</div>
`;

exports[`Controls component game over renders 1`] = `
<div class="controls">
  <div><button class="button__red">
      New deck
    </button> <span test-id="remaining" class="small"> Remaining cards in deck: 100 </span></div>
  <div><button class="button__red">
      New hand
    </button> <button disabled="disabled">
      Hit me
    </button> <button disabled="disabled">
      Stay
    </button></div>
</div>
`;
